hobbies pages fonctional

--- a/hobbies.html
+++ b/hobbies.html
@@ -82,6 +82,11 @@
                 </div>
                 <div>
                     <button id="terre">planète terre (Coût : 1000000000000 €)</button>
+                    <br>
+                    <br>
+                    <div id="victory"></div>
+                    <br>
+                    <br>
                 </div>
             </div>
         </section>
