hobbies fr FR price

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
             <h2>LinkedIn</h2>
             <p><a href="https://www.linkedin.com/in/quentin-bucher/">Visitez mon profil LinkedIn</a></p>
         </section>
+        <section>
+            <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de discuter de comment je peux contribuer à votre succès.</p>
+        </section>
     <section>
         <h2>Formulaire de contact</h2>
             <form id="contact-form" action="path/to/server/endpoint" method="POST">
