--- a/hobbies.html
+++ b/hobbies.html
@@ -55,33 +55,33 @@
             </div>
             <div id="moneyDisplay">Solde disponible :<br><br> 0 €</div>
             <button id="salaire">salaire</button>
-            <button class="upgrade-salaire" id="salaireUpgrade" >Augmenter (Coût : 75000 €)</button>
-            <div id="salairebyClick">1000 € par click</div>
+            <button class="upgrade-salaire" id="salaireUpgrade" >Augmenter (Coût : 75 000 €)</button>
+            <div id="salairebyClick">1 000 € par click</div>
             
             <h3>Entreprises</h3>
             <div id="businesses">
                 <div>
                     <div id="epiceRevenueDisplay"></div>
-                    <button id="epice">Épicerie (Coût : 100000 €)</button>
-                    <button id="epiceUpgrade" >Améliorer (Coût : 100000 €)</button>
+                    <button id="epice">Épicerie (Coût : 100 000 €)</button>
+                    <button id="epiceUpgrade" >Améliorer (Coût : 100 000 €)</button>
                 </div>
                 <div>
                     <div id="usineRevenueDisplay"></div>
-                    <button id="usine">Usine de textile (Coût : 10000000 €)</button>
-                    <button id="usineUpgrade" >Améliorer (Coût : 10000000 €)</button>
+                    <button id="usine">Usine de textile (Coût : 10 000 000 €)</button>
+                    <button id="usineUpgrade" >Améliorer (Coût : 10 000 000 €)</button>
                 </div>
                 <div>
                     <div id="centreRevenueDisplay"></div>
-                    <button id="centre">Centre-commercial (Coût : 100000000 €)</button>
-                    <button id="centreUpgrade" >Améliorer (Coût : 100000000 €)</button>
+                    <button id="centre">Centre-commercial (Coût : 100 000 000 €)</button>
+                    <button id="centreUpgrade" >Améliorer (Coût : 100 000 000 €)</button>
                 </div>
                 <div>
                     <div id="clubRevenueDisplay"></div>
-                    <button id="club">Club de football (Coût : 1000000000 €)</button>
-                    <button id="clubUpgrade" >Améliorer (Coût : 1000000000 €)</button>
+                    <button id="club">Club de football (Coût : 1 000 000 000 €)</button>
+                    <button id="clubUpgrade" >Améliorer (Coût : 1 000 000 000 €)</button>
                 </div>
                 <div>
-                    <button id="terre">planète terre (Coût : 1000000000000 €)</button>
+                    <button id="terre">planète terre (Coût : 1 000 000 000 000 €)</button>
                     <br>
                     <br>
                     <div id="victory"></div>
