--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         </header>
         <section>
             <div class="section-title">
-            <h2>Projet 1</h2>
+            <h2>Citation du jour</h2>
             </div>
             <p>Un projet que j'ai réalisé</p>
         </section>
