--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="content-wrapper">
         <header>
-            <h1>Contactez-moi</h1>
+            <h1>Contact</h1>
         </header>
         <section>
             <p>Email : <a href="mailto:quentin.bucher.pro@gmail.com">quentin.bucher.pro@gmail.com</a></p>
