maj page contact

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     </div>
     <footer>
         <div class="cv-download">
-            <a href="path/to/CV_QuentinBucher.pdf" download="CV_QuentinBucher" class="download-button">Télécharger mon CV</a>
+            <a href="Quentin_Bucher_CV.pdf" download="Quentin_Bucher_CV" class="download-button">Télécharger mon CV</a>
         </div>
         <p>quentin.bucher.pro@gmail.com<br>Langages utilisés pour ce site : HTML, CSS, JavaScript</p>
     </footer>
