--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,17 @@
         </header>
         <section>
             <div class="section-title">
-            <h2>Citation du jour</h2>
+                <h2>Citation du Jour</h2>
             </div>
-            <p>Un projet que j'ai réalisé</p>
+            <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une nouvelle citation inspirante chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Heroku pour récupérer les citations.</p>
+            <p>Cette application est un excellent exemple de mon travail avec les technologies suivantes :</p>
+            <ul>
+                <li>Swift pour le développement iOS</li>
+                <li>Node.js et Express pour l'API back-end</li>
+                <li>Base de données MongoDB pour stocker les citations</li>
+                <li>Heroku pour l'hébergement de l'API</li>
+            </ul>
+            <p>Vous pouvez télécharger l'application depuis l'<a href="lien_vers_l_app_store" target="_blank">App Store</a> et explorer le code source et plus de détails sur <a href="lien_vers_le_projet_github" target="_blank">GitHub</a>.</p>
         </section>
         <section>
             <div class="section-title">
@@ -47,7 +55,7 @@
         </div>
             <footer>
                 <div class="cv-download">
-                    <a href="path/to/CV_QuentinBucher.pdf" download="CV_QuentinBucher" class="download-button">Télécharger mon CV</a>
+                    <a href="Quentin_Bucher_CV.pdf" download="Quentin_Bucher_CV" class="download-button">Télécharger mon CV</a>
                 </div>
                 <p>quentin.bucher.pro@gmail.com<br>Langages utilisés pour ce site : HTML, CSS, JavaScript</p>
             </footer>
