--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                     <p>Développeur web et mobile</p>
                     <div class="cv-download">
-                        <a href="path/to/CV_QuentinBucher.pdf" download="CV_QuentinBucher" class="download-button">Télécharger mon CV</a>
+                        <a href="Quentin_Bucher_CV.pdf" download="Quentin_Bucher_CV" class="download-button">Télécharger mon CV</a>
                     </div>
                     
                 </header>
@@ -234,7 +234,7 @@
                     
                     <footer>
                         <div class="cv-download">
-                            <a href="path/to/CV_QuentinBucher.pdf" download="CV_QuentinBucher" class="download-button">Télécharger mon CV</a>
+                            <a href="Quentin_Bucher_CV.pdf" download="Quentin_Bucher_CV" class="download-button">Télécharger mon CV</a>
                         </div>
                         <p>quentin.bucher.pro@gmail.com<br>Langages utilisés pour ce site : HTML, CSS, JavaScript</p>
                     </footer>
