--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon CV</title>
+    <title>Quentin Bucher Portfolio</title>
     <link rel="stylesheet" media="screen" href="css/style.css"></head>
     <body>
         <div id="loading-screen">
