--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         </section>
     <section>
         <h2>Formulaire de contact</h2>
-            <form id="contact-form" action="path/to/server/endpoint" method="POST">
+        <form id="contact-form" method="POST" netlify>
                 <div class="form-group">
                     <label for="name">Nom :</label>
                     <input type="text" id="name" name="name" required>
@@ -57,5 +57,30 @@
         </div>
         <p>quentin.bucher.pro@gmail.com<br>Langages utilisés pour ce site : HTML, CSS, JavaScript</p>
     </footer>
+    <script>
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+          event.preventDefault();
+          const form = this;
+          const formData = new FormData(form);
+        
+          fetch('/', {
+            method: 'POST',
+            body: formData,
+            headers: { "Content-Type": "application/x-www-form-urlencoded" }
+          })
+          .then(response => {
+            if (response.ok) {
+              alert('Message envoyé, merci!');
+              form.reset(); // Réinitialiser le formulaire après l'envoi
+            } else {
+              alert('Une erreur est survenue. Veuillez réessayer.');
+            }
+          })
+          .catch(error => {
+            console.error('Error:', error);
+            alert('Une erreur est survenue. Veuillez réessayer.');
+          });
+        });
+        </script>
 </body>
 </html>
