maj general et projet

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,9 @@
     </nav>
     <div class="content-wrapper">
         <header>
+            <div class="section-title">
             <h1>Contact</h1>
+        </div>
         </header>
         <section>
             <p>Email : <a href="mailto:quentin.bucher.pro@gmail.com">quentin.bucher.pro@gmail.com</a></p>
