--- a/hobbies.html
+++ b/hobbies.html
@@ -19,7 +19,9 @@
     </nav>
     <div class="content-wrapper">
         <header>
+            <div class="section-title">
             <h1>Passer le temps</h1>
+        </div>
         </header>
         <section>
             <div class="section-title">
