--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,9 @@
             <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Heroku pour récupérer les citations.</p>
             <p>Voici quelques captures d'écran de l'application :</p>
             <!-- Remplacez 'path_to_your_image' par le chemin vers vos images -->
-            <img src="path_to_your_image1.jpg" alt="Capture d'écran 1" style="width:100%;max-width:300px;">
-            <img src="path_to_your_image2.jpg" alt="Capture d'écran 2" style="width:100%;max-width:300px;">
+            <img src="/assets/images/qotdandroid.webp" alt="Capture d'écran de l'application citation du jour" style="width:100%;max-width:300px;">
+            <img src="/assets/images/qotdweb.png" alt="Capture d'écran du site web citation du jour" style="width:100%;max-width:300px;">
+            <img src="/assets/images/qotdapi.png" alt="Capture d'écran du swagger de l'api" style="width:100%;max-width:300px;">
             <p>Tester les requêtes API :</p>
             <button onclick="fetchQuote('random')">Citation aléatoire</button>
             <button onclick="fetchQuote('daily')">Citation du jour</button>
