--- a/projects.html
+++ b/projects.html
@@ -29,10 +29,9 @@
             </div>
             <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Heroku pour récupérer les citations.</p>
             <p>Voici quelques captures d'écran de l'application :</p>
-            <!-- Remplacez 'path_to_your_image' par le chemin vers vos images -->
-            <img src="/assets/images/qotdandroid.webp" alt="Capture d'écran de l'application citation du jour" style="width:100%;max-width:300px;">
-            <img src="/assets/images/qotdweb.png" alt="Capture d'écran du site web citation du jour" style="width:100%;max-width:300px;">
-            <img src="/assets/images/qotdapi.png" alt="Capture d'écran du swagger de l'api" style="width:100%;max-width:300px;">
+            <div class="screen-image">
+            <img src="/assets/images/qotdandroid.webp" alt="Capture d'écran de l'application citation du jour" style="width:50%;max-width:300px;">
+        </div>
             <p>Tester les requêtes API :</p>
             <button onclick="fetchQuote('random')">Citation aléatoire</button>
             <button onclick="fetchQuote('daily')">Citation du jour</button>
@@ -41,7 +40,7 @@
             <p>Liens :</p>
             <ul>
                 <li><a href="https://quvntvn-qotd-api.netlify.app/swagger/index.html" target="_blank">Documentation API</a></li>
-                <li><a href="https://quvntvn-qotd-website.netlify.app/" target="_blank">Site Web de l'application</a></li>
+                <li><a href="https://quvntvn-qotd-website.netlify.app/" target="_blank">Version Web</a></li>
                 <li><a href="https://play.google.com/store/apps/details?id=com.quvntvndevapp.qotd_android&pli" target="_blank">Application sur Google Play</a></li>
             </ul>
         </section>
