--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="main-content" style="display:none;">
                 <header>
                     <div class="profile-photo">
-                        <img src="assets/images/chad.jpg" alt="Photo de profile">
+                        <img src="assets/images/quentin.jpg" alt="Photo de profile">
                     </div>
                     <div class="section-title">
                     <h1>Quentin Bucher</h1>
