--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,12 @@
                 <li><a href="https://play.google.com/store/apps/details?id=com.quvntvndevapp.qotd_android&pli" target="_blank">Application sur Google Play</a></li>
             </ul>
         </section>
+        <section>
+            <div class="section-title">
+                <h2>Projet à venir</h2>
+            </div>
+            <p>Plusieurs projets en cours apparaîtront bientôt ici.</p>
+        </section>
     </div>
     <footer>
         <div class="cv-download">
