--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         </section>
     <section>
         <h2>Formulaire de contact</h2>
-        <form id="contact-form" method="POST" netlify>
+        <form id="contact-form" method="POST" data-netlify="true">
                 <div class="form-group">
                     <label for="name">Nom :</label>
                     <input type="text" id="name" name="name" required>
