--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         </header>
         <section>
             <div class="section-title">
-                <h2>Citation du Jour</h2>
+                <h2>CITATION DU JOUR</h2>
             </div>
             <p><strong>Citation du Jour</strong> est une application mobile que j'ai développée pour offrir aux utilisateurs une citation chaque jour. L'application s'appuie sur une base de données personnalisée et une API hébergée sur Heroku pour récupérer les citations.</p>
             <p>Voici quelques captures d'écran de l'application :</p>
@@ -46,7 +46,7 @@
         </section>
         <section>
             <div class="section-title">
-                <h2>Projet à venir</h2>
+                <h2>PROJET À VENIR</h2>
             </div>
             <p>Plusieurs projets en cours apparaîtront bientôt ici.</p>
         </section>
