--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,14 @@
         <ul class="nav-links">
             <li><a href="index.html?skipLoading=true">CV</a></li>
             <li><a href="projects.html?skipLoading=true">Projets</a></li>
-            <li><a href="hobbies.html?skipLoading=true">Passer le temps</a></li>
+            <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
             <li><a href="contact.html?skipLoading=true">Contact</a></li>
         </ul>
     </nav>
     <div class="content-wrapper">
         <header>
             <div class="section-title">
-            <h1>Contact</h1>
+            <h1>CONTACT</h1>
         </div>
         </header>
         <section>
@@ -29,10 +29,10 @@
             <p><a href="https://www.linkedin.com/in/quentin-bucher/">Visitez mon profil LinkedIn</a></p>
         </section>
         <section>
-            <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de discuter de comment je peux contribuer à votre succès.</p>
+            <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de contribuer à votre succès.</p>
         </section>
     <section>
-        <h2>Formulaire de contact</h2>
+        <h2>FORMULAIRE DE CONTACT</h2>
         <form id="contact-form" method="POST" data-netlify="true">
                 <div class="form-group">
                     <label for="name">Nom :</label>
