--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="nav-links">
                 <li><a href="index.html?skipLoading=true">CV</a></li>
                 <li><a href="projects.html?skipLoading=true">Projets</a></li>
-                <li><a href="hobbies.html?skipLoading=true">Passer le temps</a></li>
+                <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
                 <li><a href="contact.html?skipLoading=true">Contact</a></li>
             </ul>
         </nav>
@@ -71,7 +71,7 @@
                             Novembre 2020-Juin 2021 : Alternant dev chez Carrefour<br>
                         </div>
                         <div class="experience-detail">
-                            Entreprise : Carrefour<br>
+                            Entreprise : Carrefour siège<br>
                             Durée : 1 an<br>
                             Mission : Amélioration d'un logiciel de gestion de stock d'article en promotion <br>
                             Technologie : C#, CSS, SQL<br>
@@ -184,9 +184,9 @@
                         <div class="section-title">
                         <h2>LANGUES</h2>
                     </div>
-                        <p>Anglais : Niveau B2<br>
+                        <p>Français : Langue natale<br>
                             
-                            Espagnol : Niveau A2</p>
+                            Anglais : Niveau B2</p>
                         </section>
                         <section>
                             <div class="section-title">
