--- a/projects.html
+++ b/projects.html
@@ -12,16 +12,16 @@
         <ul class="nav-links">
             <li><a href="index.html?skipLoading=true">CV</a></li>
             <li><a href="projects.html?skipLoading=true">Projets</a></li>
-            <li><a href="hobbies.html?skipLoading=true">Passer le temps</a></li>
+            <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
             <li><a href="contact.html?skipLoading=true">Contact</a></li>
         </ul>
     </nav>
     <div class="content-wrapper">
         <header>
             <div class="section-title">
-                <h1>Projets</h1>
+                <h1>PROJETS</h1>
             </div>
-            <p>Quelques projets que j'ai réalisés sur mon temps libre.</p>
+            <p>Quelques projets que j'ai réalisé sur mon temps libre.</p>
         </header>
         <section>
             <div class="section-title">
