--- a/hobbies.html
+++ b/hobbies.html
@@ -13,19 +13,19 @@
         <ul class="nav-links">
             <li><a href="index.html?skipLoading=true">CV</a></li>
             <li><a href="projects.html?skipLoading=true">Projets</a></li>
-            <li><a href="hobbies.html?skipLoading=true">Passer le temps</a></li>
+            <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
             <li><a href="contact.html?skipLoading=true">Contact</a></li>
         </ul>
     </nav>
     <div class="content-wrapper">
         <header>
             <div class="section-title">
-            <h1>Passer le temps</h1>
+            <h1>MINI-JEU</h1>
         </div>
         </header>
         <section>
             <div class="section-title">
-            <h2>Devinez le nombre entre 1 et 100</h2>
+            <h2>DEVINEZ LE NOMBRE ENTRE 1 ET 100</h2>
         </div>
             <section id="fun-time">
                 <div id="guessing-game">
@@ -37,7 +37,7 @@
                 </div>
             </section>
             <div class="section-title">
-            <h2>Duel de cowboy</h2>
+            <h2>DUEL DE COWBOYS</h2>
         </div>
         <div id="level">niveau : 1</div>
         <div class="game-container">
@@ -61,7 +61,7 @@
             <button class="upgrade-salaire" id="salaireUpgrade" >Augmenter (Coût : 75 000 €)</button>
             <div id="salairebyClick">1 000 € par click</div>
             
-            <h3>Entreprises</h3>
+            <h3>ENTREPRISES</h3>
             <div id="businesses">
                 <div>
                     <div id="epiceRevenueDisplay"></div>
