--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,9 @@
             <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de contribuer à votre succès.</p>
         </section>
     <section>
+        <div class="section-title">
         <h2>FORMULAIRE DE CONTACT</h2>
+    </div>
         <form id="contact-form" method="POST" data-netlify="true">
                 <div class="form-group">
                     <label for="name">Nom :</label>
