--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <ul class="nav-links">
             <li><a href="index.html?skipLoading=true">CV</a></li>
             <li><a href="projects.html?skipLoading=true">Projets</a></li>
-            <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
+            <li><a href="hobbies.html?skipLoading=true">Mini-jeux</a></li>
             <li><a href="contact.html?skipLoading=true">Contact</a></li>
         </ul>
     </nav>
@@ -29,7 +29,7 @@
             <p><a href="https://www.linkedin.com/in/quentin-bucher/">Visitez mon profil LinkedIn</a></p>
         </section>
         <section>
-            <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de contribuer à votre succès.</p>
+            <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de contribuer à sa réalisation.</p>
         </section>
     <section>
         <div class="section-title">
