--- a/hobbies.html
+++ b/hobbies.html
@@ -13,14 +13,14 @@
         <ul class="nav-links">
             <li><a href="index.html?skipLoading=true">CV</a></li>
             <li><a href="projects.html?skipLoading=true">Projets</a></li>
-            <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
+            <li><a href="hobbies.html?skipLoading=true">Mini-jeux</a></li>
             <li><a href="contact.html?skipLoading=true">Contact</a></li>
         </ul>
     </nav>
     <div class="content-wrapper">
         <header>
             <div class="section-title">
-            <h1>MINI-JEU</h1>
+            <h1>MINI-JEUX</h1>
         </div>
         </header>
         <section>
