--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         <ul class="nav-links">
             <li><a href="index.html?skipLoading=true">CV</a></li>
             <li><a href="projects.html?skipLoading=true">Projets</a></li>
-            <li><a href="hobbies.html?skipLoading=true">Mini-jeu</a></li>
+            <li><a href="hobbies.html?skipLoading=true">Mini-jeux</a></li>
             <li><a href="contact.html?skipLoading=true">Contact</a></li>
         </ul>
     </nav>
