--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav class="navbar">
             <ul class="nav-links">
                 <li><a href="index.html?skipLoading=true">CV</a></li>
-                <li><a href="projects.html?skipLoading=true">Projets</a></li>
-                <li><a href="hobbies.html?skipLoading=true">Mini-jeux</a></li>
-                <li><a href="contact.html?skipLoading=true">Contact</a></li>
+                <li><a href="projects.html">Projets</a></li>
+                <li><a href="hobbies.html">Mini-jeux</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="content-wrapper">
