--- a/merci.html
+++ b/merci.html
@@ -43,19 +43,10 @@
             <div class="section-title">
                 <h2>FORMULAIRE DE CONTACT</h2>
             </div>
-            <form id="contact-form" method="POST" action="https://formspree.io/f/moqglnno">
-                <div class="form-group">
-                    <label for="email">Email :</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message :</label>
-                    <textarea id="message" name="message" rows="6" required></textarea>
-                </div>
-                <!-- Champ de redirection optionnel -->
-                <input type="hidden" name="_next" value="merci.html?skipLoading=true">
-                <button type="submit" class="download-cv">Envoyer</button>
-            </form>
+            <p>Merci pour votre message !
+            <br>Je vous répondrai dans les plus brefs délais.</p>
+            </p>
+
         </section>
     </div>
 
