--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     <textarea id="message" name="message" rows="6" required></textarea>
                 </div>
                 <!-- Champ de redirection optionnel -->
-                <input type="hidden" name="_next" value="merci.html?skipLoading=true">
+                <input type="hidden" name="_next" value="merci.html">
                 <button type="submit" class="download-cv">Envoyer</button>
             </form>
         </section>
