--- a/merci.html
+++ b/merci.html
@@ -21,35 +21,34 @@
         <header>
             <div class="fade-in">
             <div class="section-title">
-            <h1>CONTACT</h1>
+            <h1>MERCI</h1>
         </div>
             </div>
         </header>
         <div class="fade-in">
         <section>
-            <p>Email : <a href="mailto:quentin.bucher.pro@gmail.com">quentin.bucher.pro@gmail.com</a></p>
-            <h2>LinkedIn</h2>
-            <p><a href="https://www.linkedin.com/in/quentin-bucher/">Visitez mon profil LinkedIn</a></p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <center><p>Merci pour votre message !
+            <br>
+            <br>Je vous répondrai dans les plus brefs délais.</p></center>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
     </div>
-    <div class="fade-in">
-        <section>
-            <p>N'hésitez pas à me contacter pour tout projet de développement. Je serais ravi de contribuer à sa réalisation.</p>
-        </section>
-    </div>
-
-    <div class="fade-in">
-        <section>
-            <div class="section-title">
-                <h2>FORMULAIRE DE CONTACT</h2>
-            </div>
-            <p>Merci pour votre message !
-            <br>Je vous répondrai dans les plus brefs délais.</p>
-            </p>
-
-        </section>
-    </div>
-
     </div>
     <footer>
         <div class="cv-download">
