--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
                                 
                                 Podcasts sur la géopolitique<br>
 
-                                football
+                                Jeux vidéo<br>
+
+                                Sport colectif
                                 <br><br><br>
                                 
                             </p>
