--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
 
                                 Jeux vidéo<br>
 
-                                Sport colectif
+                                Sport colectif<br>
+
+                                Coding game
                                 <br><br><br>
                                 
                             </p>
