--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
 
                                 Sport colectif<br>
 
-                                Coding game
+                                Coding game<br>
+
+                                Figma
                                 <br><br><br>
                                 
                             </p>
