--- a/hobbies.html
+++ b/hobbies.html
@@ -110,7 +110,7 @@
                 <h2>Calculateur de métabolisme basal</h2>
             </div>
             <div class="game-container">
-                <p>Entrez vos informations pour calculer votre métabolisme basal :</p>
+                <p>Entrez vos informations pour calculer votre total calorique journalier :</p>
                 <div>
                     <input type="radio" id="homme" name="homme" value="homme" checked />
                     <label for="homme">Homme</label>
