--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             Technologie : Wordpress, Flutter, SQL<br>
                         </div>
                         <div class="experience-summary">
-                            Novembre 2020-Juin 2021 : Alternant dev chez Carrefour<br>
+                            Novembre 2020-Juin 2021 : Développeur Alternant chez Carrefour<br>
                         </div>
                         <div class="experience-detail">
                             Entreprise : Carrefour (siège)<br>
