--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h2>À PROPOS DE MOI</h2>
                     </div>
                     <div class="content-section">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;En fin de formation en développement web et mobile à l'Institut F2I, je suis passionné par le développement d'applications mobiles tout en restant ouvert à d'autres domaines du développement informatique. Actuellement à la recherche d'un poste en région parisienne, je suis prêt à m'engager dans de nouveaux projets innovants pour débuter ma carrière professionnelle.
+                        &emsp;&emsp;&emsp;&emsp;&emsp;Diplômé d'architecte web à l'Institut F2I en 2024, je suis passionné par le développement web et mobile. Je suis actuellement en recherche d'un poste de développeur en région parisienne, prêt à m'engager dans des projets innovants pour lancer ma carrière professionnelle. Fort de mes expériences en entreprise et de mes compétences techniques variées, je suis motivé à contribuer au succès d'une équipe dynamique.
                     </div>
                 </section>  
             </div>   
@@ -133,11 +133,11 @@
                     <button class="toggle-detail">&#9660;</button>
                 </div>
                     <div class="formation-summary">
-                        2024 : Diplôme d'architect web à l'Institut F2I
+                        2024 : Mastère Architecte Web
                     </div>
                     <div class="formation-detail">
                         Architect web à l'Institut F2I<br>
-                        Construction et modélisation de site web ou d’application web & mobile
+                        Construction et modélisation de site web,de logiciel & d'application mobile
                     </div>
 
                     <div class="formation-summary">
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="formation-summary">
-                        Eté 2016 : Séjour linguistique en Irlande
+                        2016 : Séjour linguistique en Irlande
                     </div>
                     <div class="formation-detail">
                         Amélioration de l'anglais
