--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                         2024 : Mastère Architecte Web
                     </div>
                     <div class="formation-detail">
-                        Architect web à l'Institut F2I<br>
-                        Construction et modélisation de site web,de logiciel & d'application mobile
+                        Mastère Architecte Web<br>
+                        Institut F2I - Vincennes
                     </div>
 
                     <div class="formation-summary">
