--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,30 @@
     <div class="fade-in">
         <section>
             <div class="section-title">
+                <h2>Thé Tip Top - Jeu Concours</h2>
+            </div>
+            <p><strong>Thé Tip Top</strong> est un site de jeu-concours que j'ai développé pendant mes études, permettant aux utilisateurs de participer à une roue de la fortune pour gagner divers lots. Le site inclut une gestion des utilisateurs et des administrateurs, ainsi qu'une interface employée pour la gestion des récompenses.</p>
+            <p>Le site propose trois types de connexions :</p>
+            <ul>
+                <li>Utilisateur : accès à la roue et aux lots</li>
+                <li>Employé : gestion des lots gagnés par les utilisateurs</li>
+                <li>Admin : accès aux statistiques et à la gestion des utilisateurs</li>
+            </ul>
+            <p>Voici un aperçu du site :</p>
+            <div class="screen-image">
+                <img src="/assets/images/thetiptop.webp" alt="Capture d'écran du site Thé Tip Top" style="width:50%;max-width:300px;">
+            </div>
+            <p>Liens :</p>
+            <ul>
+                <li><a href="https://the-tip-top-demo.com" target="_blank">Version Démo</a></li>
+                <li><a href="https://github.com/quentinbucher/the-tip-top" target="_blank">Code source sur GitHub</a></li>
+            </ul>
+        </section>
+    </div>   
+    <div class="fade-in">
+
+        <section>
+            <div class="section-title">
                 <h2>PROJET À VENIR</h2>
             </div>
             <p>Plusieurs projets en cours apparaîtront bientôt ici.</p>
