--- a/projects.html
+++ b/projects.html
@@ -66,11 +66,11 @@
             </ul>
             <p>Voici un aperçu du site :</p>
             <div class="screen-image">
-                <img src="/assets/images/thetiptop.webp" alt="Capture d'écran du site Thé Tip Top" style="width:50%;max-width:300px;">
+                <img src="/assets/images/thetiptop.png" alt="Capture d'écran du site Thé Tip Top" style="width:50%;max-width:300px;">
             </div>
             <p>Liens :</p>
             <ul>
-                <li><a href="https://the-tip-top-demo.com" target="_blank">Version Démo</a></li>
+                <li><a href="https://dsp5-archi-o22a-4-5-g1.fr/" target="_blank">Version Démo</a></li>
                 <li><a href="https://github.com/quentinbucher/the-tip-top" target="_blank">Code source sur GitHub</a></li>
             </ul>
         </section>
