--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,8 @@
                 <li>Admin : accès aux statistiques et à la gestion des utilisateurs</li>
             </ul>
             <p>Voici un aperçu du site :</p>
-            <div class="screen-image">
-                <img src="/assets/images/thetiptop.png" alt="Capture d'écran du site Thé Tip Top" style="width:50%;max-width:300px;">
+            <div class="screen-image-landscape">
+                <img src="/assets/images/thetiptop.png" alt="Capture d'écran du site Thé Tip Top">
             </div>
             <p>Liens :</p>
             <ul>
